# chronicle

./: .env.template  .gitignore  CLAUDE.md  CONFIGURATION.md  COVERAGE_ANALYSIS_REPORT.md  DEPLOYMENT.md  INSTALLATION.md  README.md  SECURITY.md  TESTING_REPORT.md  TROUBLESHOOTING.md  check_actual_schema.sql  check_hook_events.py  check_supabase_data.py  debug_hook_detailed.py  debug_hook_env.py  debug_hook_save.py  fix_supabase_schema_complete.sql  fix_uv_imports.py  install.py  install.sh  mkdocs.yml  package-lock.json  package.json  test_claude_code_env.sh  test_hook_manual.py  test_hook_with_debug_env.py  test_hook_with_json.py  test_installation_verification.py  test_supabase_direct.py  test_supabase_query.py  test_uuid_fix.py  test_valid_event_type.py  test_with_existing_session.py  update_uv_scripts_with_new_db.py  validate_database.py
.claude/commands/: sprint.md
.github/workflows/: ci.yml  pr-coverage.yml
.husky/: pre-commit
ai_context/knowledge/: advanced_filtering_search_guide.md  claude-code-hooks-reference.md  claude_code_settings_integration_guide.md  dark_theme_design_system_docs.md  data_export_filtering_ref.md  data_sanitization_security_guide.md  database_migrations_ref.md  database_sqlite_fallback_docs.md  database_supabase_setup_guide.md  environment_config_management_ref.md  input_validation_prevention_docs.md  mcp_tool_detection_docs.md  nextjs_14_setup_guide.md  performance_metrics_visualization_docs.md  privacy_audit_compliance_ref.md  project_context_extraction_ref.md  python_base_hook_patterns_guide.md  python_database_abstraction_docs.md  (+13 more)
apps/: benchmark_performance.py  performance_monitor.py  realtime_stress_test.py
apps/hooks/: .env.template  CHANGELOG.md  CHRONICLE_INSTALLATION_STRUCTURE.md  ENVIRONMENT_VARIABLES.md  ERROR_HANDLING_GUIDE.md  README.md  __init__.py  fix_sqlite_check_constraint.py  install.py  integration_test.py  post_tool_use.py  pyproject.toml  pytest.ini  requirements.txt  session_start.py  stop.py  test_database_connectivity.py  test_hook_integration.py  test_real_world_scenario.py  user_prompt_submit.py
apps/hooks/archived/consolidated/: base_hook.py  database.py  errors.py  example_hook.py  performance.py  security.py  utils.py
apps/hooks/chronicle_demo/: README.md  config.json  demo_script.py
apps/hooks/config/: __init__.py  database.py  models.py  schema.sql  schema_sqlite.sql  settings.py
apps/hooks/consolidated/: README.md  __init__.py
apps/hooks/data/: chronicle.db
apps/hooks/docs/: IMPORT_PATTERNS.md  PERFORMANCE_OPTIMIZATION.md
apps/hooks/examples/: __init__.py  basic_setup.py  custom_hooks.py
apps/hooks/migrations/: 20241201_000001_fix_supabase_schema.sql  20241202_000000_add_event_types_migration.sql  20241202_120000_migrate_event_types.sql  README.md  fix_session_termination_postgres.sql  fix_session_termination_sqlite.sql
apps/hooks/scripts/: __init__.py  check_imports.py  chronicle.env.template  chronicle_config.json  chronicle_readme.md  demo_test.py  install.py  security_demo.py  setup_schema.py  standardize_imports.py  test_environment_fallback.py  test_hooks.py  test_validation_demo.py  uninstall.py  uv_test.py  validate_environment.py  validate_import_patterns.py
apps/hooks/scripts/db_utils/: migrate_sqlite_schema.py  setup_supabase_schema.py  update_db_imports.py
apps/hooks/scripts/snapshot/: README.md  snapshot_capture.py  snapshot_playback.py  snapshot_validator.py
apps/hooks/src/: __init__.py  base_hook.py  database.py  utils.py
apps/hooks/src/core/: __init__.py  base_hook.py  database.py  performance.py  utils.py
apps/hooks/src/hooks/: __init__.py  notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  pre_tool_use_uv.py  session_start.py  session_start_uv.py  stop.py  subagent_stop.py  user_prompt_submit.py  user_prompt_submit_uv.py
apps/hooks/src/hooks/apps/hooks/src/hooks/uv_scripts/: post_tool_use_uv.py  pre_compact_uv.py
apps/hooks/src/hooks/uv_scripts/: notification_uv.py  post_tool_use_uv.py  pre_compact_uv.py  session_start_uv.py  stop_uv.py  subagent_stop_uv.py  update_db_imports.py  user_prompt_submit_uv.py
apps/hooks/src/hooks/uv_scripts/apps/hooks/src/hooks/uv_scripts/: database_manager.py  env_loader.py
apps/hooks/src/lib/: __init__.py  base_hook.py  cross_platform.py  database.py  errors.py  health_check.py  security.py  server_manager.py  utils.py
apps/hooks/tests/: __init__.py  pytest.ini  requirements-test.txt  test_auto_start_stop_mechanism.py  test_backend_modes.py  test_backward_compatibility.py  test_backward_compatibility_validation.py  test_base_hook.py  test_chr_41_integration.py  test_chr_41_quick_validation.py  test_consolidated_cleanup.py  test_consolidation_validation.py  test_database.py  test_database_connectivity.py  test_database_consistency.py  test_database_integration.py  test_database_schema.py  test_directory_independence.py  test_environment_variables.py  test_error_handling.py  test_errors.py  test_event_name_casing.py  test_file_cleanup_validation.py  test_get_session_summaries.sql  test_hook_error_scenarios.py  test_hook_integration.py  test_hook_matcher_config.py  test_import_pattern_standardization.py  test_install.py  test_install_integration.py  test_integration_e2e.py  test_migration_organization.py  test_performance_100ms.py  test_performance_load.py  test_performance_optimization.py  test_post_tool_use.py  test_pre_tool_use_permissions.py  test_real_world_scenario.py  test_security_comprehensive.py  test_security_validation.py  (+9 more)
apps/hooks/tests/uv_scripts/: quick_performance_test.py  test_database_connectivity.py  test_db_operations.py  test_integration.py  test_other_hooks.py  test_post_tool_use.py  test_pre_tool_use.py  test_runner.py  test_session_start.py  test_user_prompt_submit.py  test_utils.py
badges/: README.md
docs/: MIGRATION_PLAN.md  README.md  index.md
scripts/: README.md  clean.sh  health-check.sh  install.sh  quick-start.sh  snapshot_capture.py  snapshot_playback.py  snapshot_validator.py  validate-env.sh
tests/: test_environment_configuration.py  test_snapshot_integration.py
(+422 files in other folders)
